[package]
name = "local-ham-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
color-eyre = "0.6.5"
crossterm = "0.29.0"
figlet-rs = "0.1.5"
maidenhead = "0.2.1"
quick-xml = { version = "0.39.2", features = ["serialize"] }
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json", "rustls"] }
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sgp4 = "2.4.0"
tokio = { version = "1.49.0", features = ["full"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["fs"] }
clap = { version = "4.5.31", features = ["derive"] }
serde_json = "1.0.140"
